--- a/user-service/user-domain/pom.xml
+++ b/user-service/user-domain/pom.xml
@@ -3,15 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.fnc</groupId>
+        <artifactId>user-service</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.fnc</groupId>
-    <artifactId>multi-warehouse-fnc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>user-domain</artifactId>
     <packaging>pom</packaging>
+
     <modules>
-        <module>common</module>
-        <module>warehouse-service</module>
-        <module>user-service</module>
+        <module>user-application-service</module>
+        <module>user-domain-core</module>
     </modules>
 
     <properties>
